--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0 --port 4200",
+"start": "ng run medical-records-frontend:serve --host 0.0.0.0 --port 8000",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
