--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express-fileupload": "^1.4.0",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.14.2",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.31.0",
